# regular_kalman_filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kalman_filter_results.csv  package.xml  setup.py
launch/: kalman_filter.launch  logger.launch  plot_data.launch
scripts/: plot_kalman_filter_estimate.py  regular_kalman_filter_estimate.py  simple_kalman_filter_estimate.py
src/pa2/: kalman_filter_lib.py  rosbot.py
src/regular_kalman_filter/: kalman_filter_lib.py  rosbot.py
